# onboarding

./: .gitignore  README.md  books.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: blacklist.py  book.py  customer.py  fraud_detection.py
app/core/: database.py
app/crud/: blacklist.py  book.py  customer.py
app/exceptions/: HighRiskError.py
app/models/: blacklist.py  book.py  customer.py
app/schemas/: blacklist.py  book.py  customer.py  validators.py
app/services/: blacklist.py  book.py  customer.py  risk_assessment.py
tests/: test_api.py  test_blacklist_api.py  test_customer_final.py  test_risk_assessment_failures.py
